# pytest_md

./: README.md  main.py  pyproject.toml  pytest.ini
pytest_md/: __init__.py  fixtures.py  plugin.py  report.py  report_data.py  utils.py
pytest_md/res/: report.template.jinja2
tests/: test_sandbox.py
