[project]
name = "pytest-md"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "pytest>=8.4.1",
]

[tool.setuptools]
packages = ["pytest_md"]

[tool.pytest.ini_options]
addopts = "--md=report.md"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.entry-points."pytest11"]
md = "pytest_md.plugin"