[project]
name = "pytest-md"
version = "0.1.1"
description = "A pytest plugin for generating beautiful Markdown test reports with detailed test information, metadata, and execution statistics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "pytest>=8.4.1",
]

[tool.setuptools]
packages = ["pytest_md"]

[tool.setuptools.package-data]
pytest_md = ["res/*"]

[tool.pytest.ini_options]
addopts = "--md=report.md"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.entry-points."pytest11"]
md = "pytest_md.plugin"